--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-06-29}
+\date{2020-06-30}
 
 \begin{document}
 \maketitle
@@ -308,23 +308,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   purrr_0.3.4         R6_2.4.1           
 ##   RColorBrewer_1.1-2  Rcpp_1.0.4.6       
 ##   readr_1.3.1         readxl_1.3.1       
-##   rematch_1.0.1       reprex_0.3.0       
-##   rlang_0.4.6         rmarkdown_2.2      
-##   rpart_4.1-15        rprojroot_1.3.2    
+##   rematch_1.0.1       repr_1.1.0         
+##   reprex_0.3.0        rlang_0.4.6        
+##   rmarkdown_2.2       rpart_4.1-15       
+##   rprojroot_1.3.2     rsconnect_0.8.16   
 ##   rstudioapi_0.11     rvest_0.3.5        
 ##   scales_1.1.1        selectr_0.4.2      
-##   snakecase_0.11.0    splines_4.0.1      
-##   stats_4.0.1         stringi_1.4.6      
-##   stringr_1.4.0       survival_3.1-12    
-##   sys_3.3             testthat_2.3.2     
-##   tibble_3.0.1        tidyr_1.1.0        
-##   tidyselect_1.1.0    tidyverse_1.3.0    
-##   tinytex_0.23        tools_4.0.1        
-##   utf8_1.1.4          utils_4.0.1        
-##   vctrs_0.3.0         viridis_0.5.1      
-##   viridisLite_0.3.0   whisker_0.4        
-##   withr_2.2.0         xfun_0.14          
-##   xml2_1.3.2          yaml_2.2.1
+##   skimr_2.1.1         snakecase_0.11.0   
+##   splines_4.0.1       stats_4.0.1        
+##   stringi_1.4.6       stringr_1.4.0      
+##   survival_3.1-12     sys_3.3            
+##   testthat_2.3.2      tibble_3.0.1       
+##   tidyr_1.1.0         tidyselect_1.1.0   
+##   tidyverse_1.3.0     tinytex_0.23       
+##   tools_4.0.1         utf8_1.1.4         
+##   utils_4.0.1         vctrs_0.3.0        
+##   viridis_0.5.1       viridisLite_0.3.0  
+##   whisker_0.4         withr_2.2.0        
+##   xfun_0.14           xml2_1.3.2         
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -2058,6 +2060,8 @@ In short you should always use tibbles (i.e., use read\_csv not read.csv). The d
 \hypertarget{making-your-data-ready-for-analysis}{%
 \chapter{Making your data ready for analysis}\label{making-your-data-ready-for-analysis}}
 
+Use skim instead of summary?
+
 \hypertarget{required-packages}{%
 \section{Required Packages}\label{required-packages}}
 
@@ -2355,10 +2359,10 @@ As you read each of these example scripts pay attention to the redundancy. Regar
 
 Pay particular attention to XXXX where the reearcher assistant didn't fllow and sex as 1 and
 
-\hypertarget{experiment-between-participant}{%
-\section{Experiment: Between-participant}\label{experiment-between-participant}}
+\hypertarget{experiment-between}{%
+\section{Experiment: Between}\label{experiment-between}}
 
-The between-participant example uses the data file data\_ex\_between.csv. Initial loading of the file, including the specification of missing data codes, is provided by the code below. The data corresponds to a designs where the researcher is interested in comparing run times (elapsed\_time) based on sex (male/female).
+The between-participant example uses the data file data\_ex\_between.csv. Initial loading of the file, including the specification of missing data codes, is provided by the code below. The data corresponds to a designs where the researcher is interested in comparing run times (elapsed\_time) based on sex (male/female). This type of workflow is appropriate when you have independent groups t-tests and between-particpant ANOVA.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2534,6 +2538,16 @@ One options for doing so is the summary command again. This time, however, we us
 \StringTok{  }\KeywordTok{summary}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{verbatim}
+##   elapsed_time 
+##  Min.   :33.0  
+##  1st Qu.:35.2  
+##  Median :37.0  
+##  Mean   :37.3  
+##  3rd Qu.:39.5  
+##  Max.   :42.0
+\end{verbatim}
 
 Scan the min and max values for each variable to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). Once this is complete, you are done preparing your between participant analytic data.
 
@@ -3047,6 +3061,23 @@ One options for doing so is the summary command again. This time, however, we us
 \end{Highlighting}
 \end{Shaded}
 
+\begin{verbatim}
+##    pizza_hot      pizza_cold     steak_hot   
+##  Min.   :7.00   Min.   :5.00   Min.   :6.00  
+##  1st Qu.:7.00   1st Qu.:6.00   1st Qu.:6.25  
+##  Median :7.50   Median :6.50   Median :7.00  
+##  Mean   :7.67   Mean   :6.33   Mean   :6.83  
+##  3rd Qu.:8.00   3rd Qu.:7.00   3rd Qu.:7.00  
+##  Max.   :9.00   Max.   :7.00   Max.   :8.00  
+##    steak_cold     burger_hot   burger_cold  
+##  Min.   :3.00   Min.   :7.0   Min.   :2.00  
+##  1st Qu.:3.25   1st Qu.:7.0   1st Qu.:3.00  
+##  Median :4.50   Median :7.5   Median :3.00  
+##  Mean   :5.00   Mean   :7.5   Mean   :3.33  
+##  3rd Qu.:6.50   3rd Qu.:8.0   3rd Qu.:3.75  
+##  Max.   :8.00   Max.   :8.0   Max.   :5.00
+\end{verbatim}
+
 Scan the min and max values for each variable to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). Once this is complete, you are done preparing your between participant analytic data.
 
 \hypertarget{pivot-to-tidy-data-1}{%
@@ -3242,8 +3273,8 @@ You can confirm the column names following our naming convention with the glimps
 ## $ jobsat5       <dbl> 5, NA, 5, 4, 5, 4, 4, 5, 5, 5, 4,...
 \end{verbatim}
 
-\hypertarget{converting-categorical-variables-to-factors}{%
-\subsection{Converting categorical variables to factors}\label{converting-categorical-variables-to-factors}}
+\hypertarget{creating-factors-3}{%
+\subsection{Creating factors}\label{creating-factors-3}}
 
 Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character
 
@@ -3321,10 +3352,10 @@ You can ensure all of these columns are now factors using the glimpse() command.
 
 Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
 
-\hypertarget{levels-of-factors}{%
-\subsection{Levels of factors}\label{levels-of-factors}}
+\hypertarget{factor-screening-3}{%
+\subsection{Factor screening}\label{factor-screening-3}}
 
-The order of the levels of factors influences how text output and graphs are generated. You can see the order of the factor levels using:
+Inspect the levels of each factor carefully. Make sure that there not any levels present that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously, mmale is an incorrectly typed version of male. Scan all the factor in your data for eronious factor levels. The code below displays the factor levels:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3345,7 +3376,7 @@ The order of the levels of factors influences how text output and graphs are gen
 ##  (Other):294
 \end{verbatim}
 
-Here we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: intersex, female, male.
+Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3389,8 +3420,12 @@ You can see the new order of the factor levels with summary():
 ##  (Other):294
 \end{verbatim}
 
-\hypertarget{checking-numerical-variables}{%
-\subsection{Checking numerical variables}\label{checking-numerical-variables}}
+\hypertarget{numeric-screening-3}{%
+\subsection{Numeric screening}\label{numeric-screening-3}}
+
+For numeric variables, you should search for impossible values.e For example, in the context of this example you want to ensure non of the elapsed\_times are impossible or so large they appear to be data entry errors.
+
+One options for doing so is the summary command again. This time, however, we use ``is.numeric'' in the where() command. However, when a survey has a large number of variables this type of output can become challenging to intrepret.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3400,60 +3435,75 @@ You can see the new order of the factor levels with summary():
 \end{Highlighting}
 \end{Shaded}
 
-\begin{verbatim}
-##     esteem1        esteem2        esteem3    
-##  Min.   :3.00   Min.   :2.00   Min.   :3.00  
-##  1st Qu.:3.00   1st Qu.:2.00   1st Qu.:4.00  
-##  Median :3.00   Median :2.00   Median :4.00  
-##  Mean   :3.39   Mean   :2.35   Mean   :3.96  
-##  3rd Qu.:4.00   3rd Qu.:3.00   3rd Qu.:4.00  
-##  Max.   :5.00   Max.   :3.00   Max.   :5.00  
-##  NA's   :24     NA's   :28     NA's   :31
-\end{verbatim}
+With larger numers of variables, it's a good idea to use the skimr package. Additionally, it makes sense to look at sets of items rather than all of the variables at once. This is because sometime items and different response formats. For example, for one measure this responses may range from 1 to 5 whereas for another measure responses could range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but it if happens it makes sense to look at items in sets.
 
-\hypertarget{create-scale-scores}{%
-\subsection{Create Scale Scores}\label{create-scale-scores}}
-
-Likert caveats. Depending on your research area, there are very different perspectives on how to analyze Likert-type items. The perspectives differ based on how they view the \href{https://en.wikipedia.org/wiki/Level_of_measurement}{level of measurement} associated with the Likert-type items. One perspective, common in Psychology, is that the numbers corresponding to each response option are of the interval type. This mean that the psychological difference between each response option perfectly corresponds to the numerical difference between each response option. That is, the psychological difference between Strongly Agree and Moderately Agree is equal to the psychological difference between Moderately Agree and Neutral, and so on.
-
-Now it looks like our data is ready for the creation of scale scores:
+Start by examining the range of non-scale items. In this case it's only age. Examine the output to see if any of the age values are unreasonble. In the output p0 and p100 indicate the 0th percentile and the 100th percentile; that is the min an max values for the variable. Check to make sure none of the age values are unreasonably low or high. If they are, you may need to check the original data source or replace them with missing values.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{glimpse}\NormalTok{(analytic_data_survey)}
+\KeywordTok{library}\NormalTok{(skimr)}
+\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(age) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{skim_without_charts}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-## Rows: 300
-## Columns: 14
-## $ id            <fct> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11...
-## $ age           <dbl> 23, 22, 18, 23, 22, 17, 23, 22, 1...
-## $ sex           <fct> male, female, male, female, male,...
-## $ eye_color     <fct> blue, brown, hazel, blue, NA, haz...
-## $ esteem1       <dbl> 3, 4, 4, 3, 3, 3, 3, 4, 4, 4, 3, ...
-## $ esteem2       <dbl> 2, 3, 3, 2, 2, 3, 2, 3, 3, 3, 2, ...
-## $ esteem3       <dbl> 4, 4, 4, 3, 4, 4, NA, 4, 4, 3, 4,...
-## $ esteem4       <dbl> 3, 4, 4, 3, 4, 4, 4, 4, 3, 4, NA,...
-## $ esteem5_rev15 <dbl> 2, 2, 2, 2, 2, NA, NA, 2, 2, 2, 3...
-## $ jobsat1       <dbl> 3, 5, 4, 3, 3, 3, 3, 5, 3, 3, 3, ...
-## $ jobsat2_rev15 <dbl> 1, 1, 1, NA, 1, 1, 2, 1, 2, 2, 3,...
-## $ jobsat3       <dbl> 3, NA, 3, 3, 3, 3, 3, 3, 3, 3, 3,...
-## $ jobsat4       <dbl> NA, 5, 5, 4, 4, 4, 4, 5, NA, 4, N...
-## $ jobsat5       <dbl> 5, NA, 5, 4, 5, 4, 4, 5, 5, 5, 4,...
+##   skim_variable n_missing complete_rate  mean   sd p0 p100
+## 1           age         3          0.99 20.52 2.05 17   24
 \end{verbatim}
 
-\hypertarget{dealing-with-reverse-key-items}{%
-\subsubsection{Dealing with reverse key items}\label{dealing-with-reverse-key-items}}
+Look the items in the first scale, self-esteem. Possible items responses for this scale range from 1 to 5, make sure they are all in this range. In the output p0 and p100 indicate the 0th percentile and the 100th percentile; that is the minimum an maximum values for the variable in these data. Examine the output to see if any of the esteem values are unreasonble (i.e., fall outside the 1 to 5 range). If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
 
-Our first step is dealing with reverse key items. The way you deal with these items depends on how you scored them. Imagine you had a 5-point scale. You could have scored the scale with the values 1, 2, 3, 4, and 5. Alternatively, you could have scored the scale with the values 0, 1, 2, 3, and 4. In this example, we scored the data using the 1 to 5 system. So we'll use that. Later I'll show you how to deal with the other scoring system (0 to 4).
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"esteem"}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{skim_without_charts}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
 
-\hypertarget{scoring-items-where-the-ratings-scale-starts-with-1}{%
-\subsection{Scoring items where the ratings scale starts with 1}\label{scoring-items-where-the-ratings-scale-starts-with-1}}
+\begin{verbatim}
+##   skim_variable n_missing complete_rate mean   sd p0 p100
+## 1       esteem1        24          0.92 3.39 0.54  3    5
+## 2       esteem2        28          0.91 2.35 0.48  2    3
+## 3       esteem3        31          0.90 3.96 0.37  3    5
+## 4       esteem4        15          0.95 3.54 0.50  3    4
+## 5 esteem5_rev15        35          0.88 2.22 0.47  1    3
+\end{verbatim}
 
-We need to take items that were reversed-key when the participant wrote them and recode those responses. We do that with using the \emph{mutate} command from the \emph{dplyr} package.
+Follow the same process for the job satisfaction items. Possible items responses for this scale range from 1 to 5, make sure they are all in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
 
-In this data file the only reverse-key item was SE7 (we known this from when we created the survey). We use the command below to reverse key an item with response options ranging from 1 to 5. So we use 6 in the command (i.e., one higher than 5).
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"jobsat"}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{skim_without_charts}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##   skim_variable n_missing complete_rate mean   sd p0 p100
+## 1       jobsat1        25          0.92 3.34 0.51  3    5
+## 2 jobsat2_rev15        27          0.91 1.51 0.61  1    3
+## 3       jobsat3        28          0.91 2.84 0.37  2    3
+## 4       jobsat4        35          0.88 4.29 0.70  3    5
+## 5       jobsat5        24          0.92 4.57 0.61  3    5
+\end{verbatim}
+
+\hypertarget{scale-scores}{%
+\subsection{Scale scores}\label{scale-scores}}
+
+Scale scores involve averaging, for each person, their score over several items to create an overall scale score. The first step in the creation of scales if correcting the values of any reverse-keyed items, as described previously.
+
+\hypertarget{reverse-key-items}{%
+\subsubsection{Reverse key items}\label{reverse-key-items}}
+
+The way you deal with reverse-keyed items depends on how you scored them. Imagine you had a 5-point scale. You could have scored the scale with the values 1, 2, 3, 4, and 5. Alternatively, you could have scored the scale with the values 0, 1, 2, 3, and 4. In this example, we scored the data using the 1 to 5 system. So we'll use that. Later I'll show you how to deal with the other scoring system (0 to 4).
+
+We need to take items that were reversed-key when the participant wrote them and recode those responses. We do that with using the \emph{mutate} command.
+
+In this data file all the reverse-keyed were identified with the suffix "\_rev15" in the column names. This suffix indicates the item was reverse-keyed and that the original scale used the response points 1 to 5. We can see those items with the glimpse() command below. Notice that there are two reverse keyed items - both on difference scales.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3470,6 +3520,26 @@ In this data file the only reverse-key item was SE7 (we known this from when we 
 ## $ jobsat2_rev15 <dbl> 1, 1, 1, NA, 1, 1, 2, 1, 2, 2, 3,...
 \end{verbatim}
 
+To correct a reverse-keyed items that ranges where the lowest possible rating value is a 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from one more than the highest possible rating. For example, if a 1 to 5 response scale was used we subtract each response from 6 to obaiin the recoded value.
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+original value & math & recoded value\tabularnewline
+\midrule
+\endhead
+1 & 6 - 1 & 5\tabularnewline
+2 & 6 - 2 & 4\tabularnewline
+3 & 6 - 3 & 3\tabularnewline
+4 & 6 - 4 & 2\tabularnewline
+5 & 6 - 5 & 1\tabularnewline
+\bottomrule
+\end{longtable}
+
+The code below:
+* selects each column that ends with "\_rev15" (i.e., both esteem and jobsat scales)
+* subtracts each value in that column from 6
+* rames the column by removing "\_rev15" because the reverse coding is complete.
+
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}\StringTok{ }
@@ -3480,7 +3550,7 @@ In this data file the only reverse-key item was SE7 (we known this from when we 
 \end{Highlighting}
 \end{Shaded}
 
-The command above creates a new column in analytic\_data called SE7c that has the reverse-keyed values for SE7 in it. You can see the new SE7c column using command below that displays the first six rows of the data. The SE7c column is at the far right of the data displayed.
+You can use the glimpse() command to see the result of your work. If you compare this to values from the previous glimpse() command you can see they have changed. Also notice the column names not longer indicate the items are reverse-keyed.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3507,6 +3577,32 @@ The command above creates a new column in analytic\_data called SE7c that has th
 ## $ jobsat5   <dbl> 5, NA, 5, 4, 5, 4, 4, 5, 5, 5, 4, NA,...
 \end{verbatim}
 
+\begin{rmdcaution}
+\begin{rmdcaution}
+
+If your scale had used response options numbered 0 to 4 the math is different.
+For each item you would use subtract values from the highest possible point (i.e, 4) instead of one larger than the highest possible point.
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+original value & math & recoded value\tabularnewline
+\midrule
+\endhead
+0 & 5 - 0 & 4\tabularnewline
+1 & 5 - 1 & 3\tabularnewline
+2 & 5 - 2 & 2\tabularnewline
+3 & 5 - 3 & 1\tabularnewline
+4 & 5 - 4 & 0\tabularnewline
+\bottomrule
+\end{longtable}
+
+Thus the mutate command would instead be:
+
+mutate(5 - across(.cols = ends\_with("\_rev15")) )
+
+\end{rmdcaution}
+\end{rmdcaution}
+
 \textbf{Note FOR A BOX }. If you had used response options numbered 0 to 4 for each item you would use the command below instead. Note that we use 4 in the command this time instead of a value one higher.
 
 \begin{Shaded}
@@ -3515,8 +3611,8 @@ The command above creates a new column in analytic\_data called SE7c that has th
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{creating-the-scale-scores}{%
-\subsection{Creating the scale scores}\label{creating-the-scale-scores}}
+\hypertarget{calculation-scale-scores}{%
+\subsubsection{Calculation scale scores}\label{calculation-scale-scores}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3645,7 +3741,8 @@ We can see our data now has the self esteem column and no esteem items.
 ## $ t2_jobsat5       <dbl> 6, 3, 6, 5, NA, 5, 5, 6, 6, 6,...
 \end{verbatim}
 
-Handle categorical variables:
+\hypertarget{creating-factors-4}{%
+\subsection{Creating factors}\label{creating-factors-4}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3656,8 +3753,14 @@ Handle categorical variables:
 \NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{where}\NormalTok{(is.character),}
                 \DataTypeTok{.fns =}\NormalTok{ as_factor))}
+\end{Highlighting}
+\end{Shaded}
 
+\hypertarget{screening-factors}{%
+\subsection{Screening factors}\label{screening-factors}}
 
+\begin{Shaded}
+\begin{Highlighting}[]
 \CommentTok{# Custom reordering of factor levels for sex}
 \NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{fct_relevel}\NormalTok{(sex,}
@@ -3671,7 +3774,11 @@ Handle categorical variables:
 \end{Highlighting}
 \end{Shaded}
 
-Create scale scores:
+\hypertarget{numeric-screening-4}{%
+\subsection{Numeric screening}\label{numeric-screening-4}}
+
+\hypertarget{scale-scores-1}{%
+\subsection{Scale scores}\label{scale-scores-1}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3719,6 +3826,9 @@ Create scale scores:
 ## $ jobsat_t1 <dbl> 4.00, 5.00, 4.40, 3.50, 4.00, 3.80, 3...
 ## $ jobsat_t2 <dbl> 4.20, 4.40, 5.00, 4.20, 4.25, 4.40, 4...
 \end{verbatim}
+
+\hypertarget{pivot-to-tidy-data-2}{%
+\subsection{Pivot to tidy data}\label{pivot-to-tidy-data-2}}
 
 But now comes the complicated point wher eyou need to pivot the data to longer.
 
