--- a/packages.bib
+++ b/packages.bib
@@ -69,6 +69,13 @@
   note = {R package version 2.2},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2020},
+  note = {R package version 2.1.1},
+  url = {https://CRAN.R-project.org/package=skimr},
+}
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
