--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -3524,7 +3524,7 @@ To correct a reverse-keyed items that ranges where the lowest possible rating va
 
 \begin{longtable}[]{@{}ccc@{}}
 \toprule
-original value & math & recoded value\tabularnewline
+Original value & Math & Recoded value\tabularnewline
 \midrule
 \endhead
 1 & 6 - 1 & 5\tabularnewline
@@ -3585,7 +3585,7 @@ For each item you would use subtract values from the highest possible point (i.e
 
 \begin{longtable}[]{@{}ccc@{}}
 \toprule
-original value & math & recoded value\tabularnewline
+Original value & Math & Recoded value\tabularnewline
 \midrule
 \endhead
 0 & 5 - 0 & 4\tabularnewline
