--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -904,7 +904,7 @@ analytic_data_survey %>%
 
 To correct a reverse-keyed items that ranges where the lowest possible rating value is a 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from one more than the highest possible rating. For example, if a 1 to 5 response scale was used we subtract each response from 6 to obaiin the recoded value.
 
-|  original value | math  | recoded value |
+|  Original value | Math  | Recoded value |
 |             :-: |  :-:  | :-:           |
 | 1               | 6 - 1 | 5             |
 | 2               | 6 - 2 | 4             |
@@ -936,7 +936,7 @@ glimpse(analytic_data_survey)
 If your scale had used response options numbered 0 to 4 the math is different.
 For each item you would use subtract values from the highest possible point (i.e, 4) instead of one larger than the highest possible point.
 
-|  original value | math  | recoded value |
+|  Original value | Math  | Recoded value |
 |             :-: |  :-:  | :-:           |
 | 0               | 5 - 0 | 4             |
 | 1               | 5 - 1 | 3             |
