--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -263,59 +263,68 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   acepack_1.4.1       askpass_1.1        
+##   abind_1.4.5         acepack_1.4.1      
+##   apaTables_2.0.5     askpass_1.1        
 ##   assertthat_0.2.1    backports_1.1.7    
 ##   base64enc_0.1-3     BH_1.72.0.3        
-##   bookdown_0.19.1     broom_0.7.0.9000   
-##   callr_3.4.3         cellranger_1.1.0   
-##   checkmate_2.0.0     cli_2.0.2          
-##   clipr_0.7.0         cluster_2.1.0      
-##   colorspace_1.4-1    compiler_4.0.1     
-##   crayon_1.3.4        curl_4.3           
-##   data.table_1.12.8   DBI_1.1.0          
-##   dbplyr_1.4.3        desc_1.2.0         
-##   digest_0.6.25       dplyr_1.0.0        
-##   ellipsis_0.3.1      evaluate_0.14      
-##   fansi_0.4.1         farver_2.0.3       
-##   forcats_0.5.0       foreign_0.8-80     
-##   Formula_1.2-3       fs_1.4.1           
-##   generics_0.0.2      ggplot2_3.3.1      
-##   glue_1.4.1          graphics_4.0.1     
-##   grDevices_4.0.1     grid_4.0.1         
-##   gridExtra_2.3       gtable_0.3.0       
-##   haven_2.3.1         highr_0.8          
-##   Hmisc_4.4-0         hms_0.5.3          
-##   htmlTable_2.0.0     htmltools_0.4.0    
-##   htmlwidgets_1.5.1   httr_1.4.1         
-##   isoband_0.2.1       janitor_2.0.1      
-##   jpeg_0.1-8.1        jsonlite_1.6.1     
-##   knitr_1.28          labeling_0.3       
-##   lattice_0.20-41     latticeExtra_0.6-29
-##   lifecycle_0.2.0     lubridate_1.7.8    
-##   magrittr_1.5        markdown_1.1       
-##   MASS_7.3.51.6       Matrix_1.2-18      
+##   bookdown_0.19.1     boot_1.3.25        
+##   broom_0.7.0.9000    callr_3.4.3        
+##   car_3.0.8           carData_3.0.4      
+##   cellranger_1.1.0    checkmate_2.0.0    
+##   cli_2.0.2           clipr_0.7.0        
+##   cluster_2.1.0       colorspace_1.4-1   
+##   compiler_4.0.1      crayon_1.3.4       
+##   curl_4.3            data.table_1.12.8  
+##   DBI_1.1.0           dbplyr_1.4.3       
+##   desc_1.2.0          digest_0.6.25      
+##   dplyr_1.0.0         ellipsis_0.3.1     
+##   evaluate_0.14       fansi_0.4.1        
+##   farver_2.0.3        forcats_0.5.0      
+##   foreign_0.8-80      Formula_1.2-3      
+##   fs_1.4.1            generics_0.0.2     
+##   ggplot2_3.3.1       glue_1.4.1         
+##   graphics_4.0.1      grDevices_4.0.1    
+##   grid_4.0.1          gridExtra_2.3      
+##   gtable_0.3.0        haven_2.3.1        
+##   highr_0.8           Hmisc_4.4-0        
+##   hms_0.5.3           htmlTable_2.0.0    
+##   htmltools_0.4.0     htmlwidgets_1.5.1  
+##   httr_1.4.1          isoband_0.2.1      
+##   janitor_2.0.1       jpeg_0.1-8.1       
+##   jsonlite_1.6.1      knitr_1.28         
+##   labeling_0.3        lattice_0.20-41    
+##   latticeExtra_0.6-29 lifecycle_0.2.0    
+##   lme4_1.1.23         lubridate_1.7.8    
+##   magrittr_1.5        maptools_1.0.1     
+##   markdown_1.1        MASS_7.3.51.6      
+##   Matrix_1.2-18       MatrixModels_0.4.1 
 ##   methods_4.0.1       mgcv_1.8.31        
-##   mime_0.9            mnormt_1.5-7       
-##   modelr_0.1.8        munsell_0.5.0      
-##   nlme_3.1-148        nnet_7.3-14        
-##   openssl_1.4.1       packrat_0.5.0      
-##   parallel_4.0.1      pillar_1.4.4       
+##   mime_0.9            minqa_1.2.4        
+##   mnormt_1.5-7        modelr_0.1.8       
+##   munsell_0.5.0       nlme_3.1-148       
+##   nloptr_1.2.2.1      nnet_7.3-14        
+##   openssl_1.4.1       openxlsx_4.1.5     
+##   packrat_0.5.0       parallel_4.0.1     
+##   pbkrtest_0.4.8.6    pillar_1.4.4       
 ##   pkgbuild_1.0.8      pkgconfig_2.0.3    
 ##   pkgload_1.1.0       png_0.1-7          
 ##   praise_1.0.0        prettyunits_1.1.1  
 ##   processx_3.4.2      progress_1.2.2     
 ##   ps_1.3.3            psych_1.9.12.31    
-##   purrr_0.3.4         R6_2.4.1           
-##   RColorBrewer_1.1-2  Rcpp_1.0.4.6       
+##   purrr_0.3.4         quantreg_5.55      
+##   R6_2.4.1            RColorBrewer_1.1-2 
+##   Rcpp_1.0.4.6        RcppEigen_0.3.3.7.0
 ##   readr_1.3.1         readxl_1.3.1       
 ##   rematch_1.0.1       repr_1.1.0         
-##   reprex_0.3.0        rlang_0.4.6        
-##   rmarkdown_2.2       rpart_4.1-15       
-##   rprojroot_1.3.2     rsconnect_0.8.16   
-##   rstudioapi_0.11     rvest_0.3.5        
-##   scales_1.1.1        selectr_0.4.2      
-##   skimr_2.1.1         snakecase_0.11.0   
-##   splines_4.0.1       stats_4.0.1        
+##   reprex_0.3.0        rio_0.5.16         
+##   rlang_0.4.6         rmarkdown_2.2      
+##   rpart_4.1-15        rprojroot_1.3.2    
+##   rsconnect_0.8.16    rstudioapi_0.11    
+##   rvest_0.3.5         scales_1.1.1       
+##   selectr_0.4.2       skimr_2.1.1        
+##   snakecase_0.11.0    sp_1.4.2           
+##   SparseM_1.78        splines_4.0.1      
+##   statmod_1.4.34      stats_4.0.1        
 ##   stringi_1.4.6       stringr_1.4.0      
 ##   survival_3.1-12     sys_3.3            
 ##   testthat_2.3.2      tibble_3.0.1       
@@ -326,7 +335,7 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   viridis_0.5.1       viridisLite_0.3.0  
 ##   whisker_0.4         withr_2.2.0        
 ##   xfun_0.14           xml2_1.3.2         
-##   yaml_2.2.1
+##   yaml_2.2.1          zip_2.0.4
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -2073,6 +2082,7 @@ Required Packages\tabularnewline
 \midrule
 \endhead
 apaTables\tabularnewline
+HMisc\tabularnewline
 janitor\tabularnewline
 psych\tabularnewline
 tidyverse\tabularnewline
@@ -3588,28 +3598,20 @@ For each item you would use subtract values from the highest possible point (i.e
 Original value & Math & Recoded value\tabularnewline
 \midrule
 \endhead
-0 & 5 - 0 & 4\tabularnewline
-1 & 5 - 1 & 3\tabularnewline
-2 & 5 - 2 & 2\tabularnewline
-3 & 5 - 3 & 1\tabularnewline
-4 & 5 - 4 & 0\tabularnewline
+0 & 4 - 0 & 4\tabularnewline
+1 & 4 - 1 & 3\tabularnewline
+2 & 4 - 2 & 2\tabularnewline
+3 & 4 - 3 & 1\tabularnewline
+4 & 4 - 4 & 0\tabularnewline
 \bottomrule
 \end{longtable}
 
 Thus the mutate command would instead be:
 
-mutate(5 - across(.cols = ends\_with("\_rev15")) )
+mutate(4 - across(.cols = ends\_with("\_rev15")) )
 
 \end{rmdcaution}
 \end{rmdcaution}
-
-\textbf{Note FOR A BOX }. If you had used response options numbered 0 to 4 for each item you would use the command below instead. Note that we use 4 in the command this time instead of a value one higher.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{analytic_data_survey <-}\StringTok{ }\KeywordTok{mutate}\NormalTok{(analytic_data_survey, }\DataTypeTok{esteem7c =} \DecValTok{4} \OperatorTok{-}\StringTok{ }\NormalTok{SE7) }
-\end{Highlighting}
-\end{Shaded}
 
 \hypertarget{calculation-scale-scores}{%
 \subsubsection{Calculation scale scores}\label{calculation-scale-scores}}
@@ -3892,27 +3894,53 @@ But now comes the complicated point wher eyou need to pivot the data to longer.
 \hypertarget{basic-descriptive-statistics}{%
 \section{Basic descriptive statistics}\label{basic-descriptive-statistics}}
 
-\hypertarget{the-usual-suspects}{%
-\subsection{The usual suspects}\label{the-usual-suspects}}
+\hypertarget{skim}{%
+\subsection{skim()}\label{skim}}
 
-One approach is the describe() command from the psych package.
+One approach is the skim() command from the skimr package.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{psych}\OperatorTok{::}\KeywordTok{describe}\NormalTok{(analytic_data_survey)}
+\KeywordTok{library}\NormalTok{(skimr)}
+\KeywordTok{skim}\NormalTok{(analytic_data_survey)}
 \end{Highlighting}
 \end{Shaded}
 
-One approach is the apa.cor.table() command from the apaTables package.
+\begin{verbatim}
+##   skim_variable n_missing complete_rate  mean   sd   p0
+## 1           age         3          0.99 20.52 2.05 17.0
+## 2     esteem_t1         0          1.00  3.40 0.32  2.5
+## 3     esteem_t2         0          1.00  3.93 0.34  3.2
+## 4     jobsat_t1         0          1.00  3.91 0.43  2.0
+## 5     jobsat_t2         0          1.00  4.37 0.42  3.0
+##    p100
+## 1 24.00
+## 2  4.25
+## 3  4.80
+## 4  5.00
+## 5  5.25
+\end{verbatim}
+
+\hypertarget{apa.cor.table}{%
+\subsection{apa.cor.table()}\label{apa.cor.table}}
+
+One approach is the apa.cor.table() command from the apaTables package which creates a Word document with the table, see Figure \ref{fig:descapa}.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \KeywordTok{library}\NormalTok{(apaTables)}
 \NormalTok{analytic_data_survey }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{select}\NormalTok{(}\KeywordTok{where}\NormalTok{(is.numeric)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{apa.cor.table}\NormalTok{()}
+\StringTok{  }\KeywordTok{apa.cor.table}\NormalTok{(}\DataTypeTok{filename =} \StringTok{"apa_descriptives.doc"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{ch_score_items/images/desc_apa} \caption{Word document created by apa.cor.table}\label{fig:descapa}
+\end{figure}
+
+\hypertarget{tidyverse}{%
+\subsection{tidyverse}\label{tidyverse}}
 
 The tidyverse approach is oddly long but incredibly flexible. More details on why.
 
@@ -3969,7 +3997,35 @@ The tidyverse approach is oddly long but incredibly flexible. More details on wh
 \hypertarget{cronbachs-alpha}{%
 \subsection{Cronbach's alpha}\label{cronbachs-alpha}}
 
-If you want Cronbach's alpha to estimate the reliability of the scale, you can use the alpha command from the psych package with the code below. Note we have to use the item level data we created a copy of, called analytic\_data\_items. Cronbach's alpha is labeled ``raw alpha'' in the output.
+If you want Cronbach's alpha to estimate the reliability of the scale, you can use the alpha command from the psych package with the code below. Note we have to use the item level data we created a copy of, called analytic\_data\_items. The glimpse() command illustrates this file has all the original items (after reverse-coding has been fixed).
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{analytic_data_items }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{glimpse}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 300
+## Columns: 14
+## $ id        <fct> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12...
+## $ age       <dbl> 23, 22, 18, 23, 22, 17, 23, 22, 17, N...
+## $ sex       <fct> male, female, male, female, male, fem...
+## $ eye_color <fct> blue, brown, hazel, blue, NA, hazel, ...
+## $ esteem1   <dbl> 3, 4, 4, 3, 3, 3, 3, 4, 4, 4, 3, 4, N...
+## $ esteem2   <dbl> 2, 3, 3, 2, 2, 3, 2, 3, 3, 3, 2, 2, N...
+## $ esteem3   <dbl> 4, 4, 4, 3, 4, 4, NA, 4, 4, 3, 4, 4, ...
+## $ esteem4   <dbl> 3, 4, 4, 3, 4, 4, 4, 4, 3, 4, NA, 4, ...
+## $ esteem5   <dbl> 4, 4, 4, 4, 4, NA, NA, 4, 4, 4, 3, 4,...
+## $ jobsat1   <dbl> 3, 5, 4, 3, 3, 3, 3, 5, 3, 3, 3, 4, 4...
+## $ jobsat2   <dbl> 5, 5, 5, NA, 5, 5, 4, 5, 4, 4, 3, 5, ...
+## $ jobsat3   <dbl> 3, NA, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, ...
+## $ jobsat4   <dbl> NA, 5, 5, 4, 4, 4, 4, 5, NA, 4, NA, 5...
+## $ jobsat5   <dbl> 5, NA, 5, 4, 5, 4, 4, 5, 5, 5, 4, NA,...
+\end{verbatim}
+
+We calculated reliability using psych::alpha() command. Cronbach's alpha is labeled ``raw alpha'' in the output.
 
 \begin{Shaded}
 \begin{Highlighting}[]
