--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -796,7 +796,7 @@ analytic_data_survey %>%
 
 ### Numeric screening
 
-For numeric variables, you should search for impossible values.e For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
+For numeric variables, you should search for impossible values. For example, in the context of this example you want to ensure none of the elapsed_times are impossible or so large they appear to be data entry errors.
 
 One options for doing so is the summary command again. This time, however, we use “is.numeric” in the where() command. However, when a survey has a large number of variables this type of output can become challenging to intrepret.
 
