--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -2155,7 +2155,6 @@ When conducting analyses in R it is typically necessary to have data in a format
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
-\tightlist
 \item
   Each variable forms a column.
 \item
@@ -2353,15 +2352,32 @@ R Studio in the Cloud Assignment
 
 R Studio in the Cloud, custom project
 1. Create a new Project using the web interface
-2. Upload your data files in using the upload button in the Files pane
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  Upload your data files in using the upload button in the Files pane
+\end{enumerate}
 
 R Studio Local Computer, custom project
 1. Create a folder on your computer for the analysis
-2. Place your data files in that folder
-3. Use the menu item File \textgreater{} New Project\ldots{} to start the project
-4. On the window that appears select ``Existing Directory''
-5. On the next screen, press the ``Browse'' button and find/select the folder with your data
-6. Press the Create Project Button
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  Place your data files in that folder
+\item
+  Use the menu item File \textgreater{} New Project\ldots{} to start the project
+\item
+  On the window that appears select ``Existing Directory''
+\item
+  On the next screen, press the ``Browse'' button and find/select the folder with your data
+\item
+  Press the Create Project Button
+\end{enumerate}
 
 Regardless of whether your are working from the cloud or locally you should now have an R Studio project with your data files in it. Using Projects.
 
@@ -3433,7 +3449,7 @@ You can see the new order of the factor levels with summary():
 \hypertarget{numeric-screening-3}{%
 \subsection{Numeric screening}\label{numeric-screening-3}}
 
-For numeric variables, you should search for impossible values.e For example, in the context of this example you want to ensure non of the elapsed\_times are impossible or so large they appear to be data entry errors.
+For numeric variables, you should search for impossible values. For example, in the context of this example you want to ensure none of the elapsed\_times are impossible or so large they appear to be data entry errors.
 
 One options for doing so is the summary command again. This time, however, we use ``is.numeric'' in the where() command. However, when a survey has a large number of variables this type of output can become challenging to intrepret.
 
